cargo-features = ["edition2024"]

[package]
name = "msp430g2230-pac"
version = "0.1.1"
description = """
Peripheral Access Crate (PAC) for the msp430g2230, generated using msp430_svd and svd2rust.
"""
authors = ["Dylan Keller <drkeller2000@outlook.com"]
license = "MIT"
keywords = ["msp", "embedded", "pac"]
categories = ["embedded"]
readme = "README.md"
repository = "https://github.com/dr-keller/msp430g2230-pac.git"
homepage = "https://github.com/dr-keller/msp430g2230-pac"


[dependencies]
msp430 = "0.4.1"
vcell = "0.1.3"

[dev-dependencies]
svd2rust = "0.37.0"

[dependencies.critical-section]
optional = true
version = "1.0.0"

[dependencies.msp430-rt]
optional = true
version = "0.4.0"

[features]
rt = ["msp430-rt/device"]
